--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
+    <h3>Digital Watch</h3>
     <div>
-
         <span id="hour">00</span>ঃ<span id="minute">00</span>ঃ<span id="second">00</span>
 
     </div>
