--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
 <body>
     <h3>Digital Watch</h3>
-    <div>
-        <span id="hour">00</span>ঃ<span id="minute">00</span>ঃ<span id="second">00</span>
+    <div id="watchTime">
 
     </div>
 
